# Nephele

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose-ob.yml  docker-compose.yml  manage.py  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: django.yml
apps/cloud/: admin.py  models.py
apps/cloud/migrations/: 0001_initial.py  0002_alter_clustercapacity_deleted_at_and_more.py  0002_clusterprovider.py  0003_alter_clusterprovider_provider_type.py  0003_taskqueue.py  0004_clusterprovider_cluster_auth_and_more.py  0004_taskqueue_cpu_capacity_taskqueue_gpu_capacity_and_more.py  0005_alter_taskqueue_name.py  0005_remove_clusterprovider_cluster_cpu_capacity_and_more.py  0006_remove_clustercapacity_cluster_clustercapacity_zone.py  0006_remove_node_cluster_provider.py  0007_alter_clustercapacity_zone.py  0007_zonecapacitystatic.py  0008_clusterresourcequota_project_and_more.py  0008_zonecapacitystatic_audited_at.py  0009_delete_clustercapacity.py  0009_rename_clusterresourcequota_quota.py  0010_alter_quota_unique_together_node_reserveplan.py  0010_rename_quota_computequota.py  0011_clusterprovider_created_by_and_more.py  0012_clusterprovider_updated_by_computequota_updated_by_and_more.py
apps/data/: admin.py  apps.py  models.py
apps/data/migrations/: 0001_initial.py  0002_alter_dataset_deleted_at_alter_layout_deleted_at_and_more.py  0002_initial.py  0003_alter_dataset_path.py  0003_dataset_created_by_dataset_deleted_by_and_more.py  0004_dataset_updated_by_layout_updated_by_and_more.py  0005_layoutv2.py  0006_rename_layoutv2_layoutwithtn_and_more.py  0007_delete_layoutwithtn.py
apps/project/: admin.py  models.py
apps/project/migrations/: 0001_initial.py  0002_alter_project_deleted_at.py  0003_projectsettings.py  0004_projectsettings_access_level.py  0005_project_display_name_alter_project_name.py  0006_project_private.py  0007_project_created_by_project_deleted_by_and_more.py  (+1 more)
apps/storage/: admin.py  models.py
apps/storage/migrations/: 0001_initial.py  (+7 more)
apps/task/: admin.py  models.py
apps/usage/: admin.py  models.py
apps/user/: admin.py  models.py
nephele/: asgi.py  managers.py  models.py  querysets.py  settings.py  signals.py  urls.py  wsgi.py
scripts/: fake.py
(+25 files in other folders)
